responsiveness added and background fixed

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body{
     font-family: "Open Sans", sans-serif;
     margin: 0;
     width: 100%;
+    background: #833ab4;  
+background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  
+background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); 
+
+    
 
     
 }
@@ -45,11 +50,9 @@ nav{
 .main{
     
     display: block;
-    width: 800px;
-    max-width: 800px;
-    min-width: 100px;
-    background: rgba(160, 82, 255, 0.75);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    width:80%;
+    background: rgba(39, 38, 38, 0.75);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.75);
     margin: 80px auto;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -57,15 +60,21 @@ nav{
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     opacity: 0.75;
+    
  
    
     
 }
 .main-heading{
     color: #000;
-    margin-left: 2%;
+    text-align: center;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
     font-weight: 300px;
     font-size: 30px;
+    
     
     
 }
@@ -73,13 +82,13 @@ nav{
 .box-1{
    
     display:block ;
-    width: 350px;
+    width: 30%;
     height: 200px;
     min-width: auto;
     margin: auto;
     margin-bottom: 20px;
-    background: rgba(32, 27, 27, 0.25);
-box-shadow: 0 8px 32px 0 rgba(21, 25, 80, 0.37);
+    background: rgba(255, 255, 255, 0.25);
+box-shadow: 0 8px 32px 0 rgba(124, 127, 149, 0.5);
 backdrop-filter: blur( 4px );
 -webkit-backdrop-filter: blur( 4px );
 border-radius: 10px;
@@ -93,23 +102,24 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     min-width: auto;
     margin: auto;
     margin-bottom: 20px;
-    background: rgba(32, 27, 27, 0.25);
-box-shadow: 0 8px 32px 0 rgba(21, 25, 80, 0.37);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(124, 127, 149, 0.5);
 backdrop-filter: blur( 4px );
 -webkit-backdrop-filter: blur( 4px );
 border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+border: 1px solid rgba(227, 219, 219, 0.18);
 
 }
 .box-3{
     display:block ;
-    width: 700px;
+    padding: auto;
+    width: 80%;
     height: 250px;
     min-width: auto;
     margin: auto;
     margin-bottom: 20px;
-    background: rgba(32, 27, 27, 0.25);
-box-shadow: 0 8px 32px 0 rgba(21, 25, 80, 0.37);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(124, 127, 149, 0.5);
 backdrop-filter: blur( 4px );
 -webkit-backdrop-filter: blur( 4px );
 border-radius: 10px;
@@ -118,7 +128,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 
 }
 .foot{
-background: linear-gradient(90deg,#cc2b5e,#753a88 );
+background-color: #000;
 
 width: 100%;
 text-align: center;
@@ -132,8 +142,8 @@ vertical-align: -2px;
     min-width: auto;
     margin: auto;
     margin-bottom: 20px;
-    background: rgba(32, 27, 27, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(21, 25, 80, 0.37);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(124, 127, 149, 0.5);
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border-radius: 50% ;
@@ -142,9 +152,33 @@ vertical-align: -2px;
     -moz-border-radius: 50% ;
     -ms-border-radius: 50% ;
     -o-border-radius: 50% ;
+    padding: auto;
 }
 .logo{
     width: 20px;
     height: 20px;
     vertical-align: -4px;
+}
+.navbar{
+    width: 100%;
+    background-color: #000;
+    display: block;
+    position: absolute;
+    border-radius: 0%;
+    -webkit-border-radius: 0%;
+    -moz-border-radius: 0%;
+    -ms-border-radius: 0%;
+    -o-border-radius: 0%;
+}
+.right{
+    float: right;
+}
+.navbar-brand{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 600;
+    font-size: larger;
+}
+.footer-text{
+    color: #fff;
+    margin: 5px auto;
 }
