--- a/style.css
+++ b/style.css
@@ -348,15 +348,15 @@ vertical-align: -2px;
     color: #fff;}
 
 .box-3 img{
-    padding-left: 30%;
-    padding-top: 7%;
+   margin-top:3% ;
+   margin-left: 21%;
     height: 80%;
     width: 70%;
 }
 .circle img{
     height: 60%;
     width: 60%;
-    padding: 10% 10%;
+    
     margin-left: 20% ;
     margin-top: 20%;
 }
